Setup database schema, entity mappings, and Hibernate ORM integration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,20 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
+
+
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost:5432/peer_assessment"
+db.default.username="amal"
+db.default.password="P@ssw0rd@123"
+
+# DataSource to be exposed via JNDI for JPA
+db.default.jndiName=DefaultDS
+
+# Persistence unit for JPA
+jpa.default=defaultPersistenceUnit
+
+# Enable Hibernate ORM schema updates
+play.jpa.ddl.auto=update
+
+play.mode=dev
+play.http.secret.key="xxxxxxxmfsjkgnwighnwiakgnsa kjgnak"
