--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,20 +1,24 @@
-# This is the main configuration file for the application.
-# https://www.playframework.com/documentation/latest/ConfigFile
-
-
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/peer_assessment"
-db.default.username="amal"
-db.default.password="P@ssw0rd@123"
+# Database Configuration (Using Environment Variables)
+db.default.driver=${?DB_DRIVER}
+db.default.url=${?DB_URL}
+db.default.username=${?DB_USERNAME}
+db.default.password=${?DB_PASSWORD}
 
 # DataSource to be exposed via JNDI for JPA
-db.default.jndiName=DefaultDS
+db.default.jndiName="DefaultDS"
 
 # Persistence unit for JPA
-jpa.default=defaultPersistenceUnit
+jpa.default="defaultPersistenceUnit"
 
-# Enable Hibernate ORM schema updates
-play.jpa.ddl.auto=update
+# Control Hibernate Schema Updates
+play.jpa.ddl.auto=${?DB_AUTO_UPDATE}
+hibernate.hbm2ddl.auto=${?DB_AUTO_UPDATE}
 
-play.mode=dev
-play.http.secret.key="xxxxxxxmfsjkgnwighnwiakgnsa kjgnak"
+# Play Framework Mode
+play.mode=${?PLAY_MODE}
+
+# Play Secret Key
+play.http.secret.key=${?PLAY_SECRET}
+
+# Enable required modules
+play.modules.enabled += "modules.Module"
