integrated sign-in functionality with authentication and authorization

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,3 +22,17 @@ play.http.secret.key=${?PLAY_SECRET}
 
 # Enable required modules
 play.modules.enabled += "modules.Module"
+
+
+play.filters {
+  csrf {
+    header {
+      bypassHeaders {
+        Csrf-Token = "*"
+      }
+    }
+  }
+}
+
+play.filters.csrf.header.name = "Csrf-Token"
+play.filters.csrf.cookie.name = "csrfToken"
